Expose the Flickable's internal contentItem So that dynamically created items can be parented to the contentItem and be flicked with the rest of the content.

Task-number: QTBUG-11674
Reviewed-by: Aaron Kennedy